--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 .codex
 .claude
+node_modules/
+.pnpm-store/
+dist/
+coverage/
+.DS_Store
+apps/**/build/
+sdk/**/build/
+artifacts/
+python/harness/.venv/
+python/harness/.uv/
+python/harness/__pycache__/
+python/harness/.pytest_cache/
