--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: "^10.13.1"
       - uses: actions/setup-node@v4
         with:
           node-version-file: .node-version
@@ -41,6 +41,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v2
+        with:
+          version: "^0.7.22"
       - name: Cache uv wheels
         uses: actions/cache@v4
         with:
