--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "description": "Workspace + harness bootstrap for Praxis agents",
   "version": "0.1.0",
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@^10.13.1",
   "scripts": {
     "bootstrap": "pnpm install",
     "lint": "pnpm -r lint",
     "test:unit": "pnpm vitest --run"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.2",
-    "vitest": "^1.2.2"
+    "@types/node": "^20.19.24",
+    "eslint": "^8.57.1",
+    "typescript": "^5.9.3",
+    "vitest": "^1.6.1"
   }
 }
