--- a/python/harness/pyproject.toml
+++ b/python/harness/pyproject.toml
@@ -5,10 +5,10 @@ description = "Mock E2E harness for Praxis"
 authors = [{ name = "Praxis" }]
 requires-python = ">=3.11,<3.12"
 dependencies = [
-  "pytest>=7.4",
-  "anyio>=4.2",
-  "opentelemetry-sdk>=1.25",
-  "rich>=13.7"
+  "pytest==9.0.0",
+  "anyio==4.11.0",
+  "opentelemetry-sdk==1.38.0",
+  "rich==14.2.0"
 ]
 
 [tool.pytest.ini_options]
