--- a/sdk/example-sdk/package.json
+++ b/sdk/example-sdk/package.json
@@ -8,8 +8,8 @@
     "test": "vitest --run"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
-    "vitest": "^1.2.2",
-    "@types/node": "^20.11.17"
+    "@types/node": "^24.10.1",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.8"
   }
 }
