--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "ajv": "^6.12.6",
     "eslint": "^9.39.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.8"
